2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  New peephole rules, fixed and reenabled rule 44.

2020-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3102.c:
	  Disable some peephole rules for bug #3102.

2020-08-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Improve back compatibility with elder gcc/g++.

2020-08-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Fix unmatched right parentheses.

2020-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3101.

2020-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implement RFE #404.

2020-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small improvements for left-shift by constant expression.

2020-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3093.c:
	  Test for bug #3093.
	* src/z80/gen.c:
	  Improve left shift, RFE #465.

2020-08-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (resultTypePropagate): Fix bug #3093

2020-08-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/p99-conformance.c: Disable another test
	  for pdk14 to avoid RAM overflow

2020-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3097.c:
	  Fix bug #3097.

2020-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/p99-conformance.c: Disable a test for
	  mcs51-small due to limited memory
	* support/regression/tests/bug-2645.c: Disable warning 88 too

2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/tlcs90/abs.s,
	  device/lib/tlcs90/memcpy.s,
	  device/lib/tlcs90/memmove.s,
	  device/lib/tlcs90/setjmp.s,
	  device/lib/tlcs90/strcpy.s,
	  device/lib/tlcs90/strlen.s:
	  Small stdlib optimizations for tlcs90.

2020-08-11 Sergey Belyashov <sergey.belyashov@gmail.com>
